--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,6 @@
   "name": "ts-hook",
   "author": "fireboom",
   "description": "这里是sdk的描述",
-  "outputPath": "../../custom-ts/generated",
+  "outputPath": "./custom-ts/generated",
   "switch": true
 }
