--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-hook",
+  "name": "node-hook",
   "author": "fireboom",
   "description": "这里是sdk的描述",
   "outputPath": "./custom-ts/generated",
