fix: update template

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-hook",
+  "name": "node-server",
   "author": "fireboom",
   "description": "这里是sdk的描述",
   "outputPath": "./custom-ts/generated",
