--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "node-server",
   "author": "fireboom",
+  "version": "0.1.0",
   "description": "这里是sdk的描述",
   "outputPath": "./custom-ts",
   "enabled": true
