--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "name": "node-server",
   "author": "fireboom",
   "version": "0.1.0",
+  "type": "hook",
   "description": "这里是sdk的描述",
   "outputPath": "./custom-ts",
   "enabled": true
