--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
   "name": "node-server",
   "author": "fireboom",
   "version": "0.1.0",
-  "type": "hook",
+  "type": "server",
+  "hookLanguage": "ts",
   "description": "这里是sdk的描述",
   "outputPath": "./custom-ts",
   "enabled": true
