--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "author": "fireboom",
   "version": "0.1.0",
   "type": "server",
-  "hookLanguage": "ts",
+  "hookLanguage": "typescript",
   "description": "这里是sdk的描述",
   "outputPath": "./custom-ts",
   "enabled": true
