--- a/files/package.json
+++ b/files/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@types/node": "^14.14.37",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.3.1",
     "fastify": "^4.9.2",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
@@ -18,12 +19,12 @@
   },
   "name": "fireboom-hooks",
   "scripts": {
-    "dev": "npm run build-operations && cross-env WG_CLI_LOG_PRETTY=true START_HOOKS_SERVER=true WG_DIR_ABS=. ts-node fireboom.server.ts --files",
+    "dev": "npm run build-operations && cross-env DOTENV_CONFIG_PATH=../.env WG_CLI_LOG_PRETTY=true START_HOOKS_SERVER=true WG_DIR_ABS=. ts-node -r dotenv/config fireboom.server.ts --files",
     "watch": "nodemon",
     "build-operations": "ts-node scripts/buildOperations.ts && tsc --project operations.tsconfig.json && tsc-alias -p operations.tsconfig.json",
     "build": "npm run build-operations && tsc && tsc-alias",
     "clear": "rm -rf **/*.js && rm -rf **/*.d.ts",
-    "start": "cross-env NODE_ENV=production START_HOOKS_SERVER=true WG_DIR_ABS=. node fireboom.server.js"
+    "start": "cross-env NODE_ENV=production DOTENV_CONFIG_PATH=../.env START_HOOKS_SERVER=true WG_DIR_ABS=. node -r dotenv/config fireboom.server.js"
   },
   "stackblitz": {
     "startCommand": "npm run dev"
